--- a/src/Blog/MyBlogMain.css
+++ b/src/Blog/MyBlogMain.css
@@ -17,12 +17,17 @@
   width: 850px;
   height: 50px;
   right: 0;
+  top: 15px;
   margin-left: auto;
-  justify-content: space-between;
-  align-items: center;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  flex-direction: column;
 }
 .BlogMainTopContent {
+  display: flex;
+  align-items: center;
   width: 500px;
+  height: 30px;
   font-size: 14px;
 }
 .BlogTopContentAll {
