--- a/src/styles/M3.css
+++ b/src/styles/M3.css
@@ -29,6 +29,8 @@
 }
 .M3SubNewsHead {
   font-weight: bold;
+  width: 70px;
+  text-align: center;
 }
 .M3Space {
   width: 30px;
@@ -45,7 +47,8 @@
   height: 3px;
   background-color: rgb(190, 190, 190);
   margin: auto;
-  margin-left: 5px;
+  position: relative;
+  left: 6px;
 }
 .M3SubNewsText1 {
   font-weight: bold;
@@ -56,4 +59,6 @@
 .M3SubNewsText2 {
   font-weight: bold;
   margin-right: 5px;
+  width: 40px;
+  text-align: center;
 }
