--- a/src/styles/Weather.css
+++ b/src/styles/Weather.css
@@ -1,6 +1,6 @@
 .MySwiper10 {
   width: 370px;
-  height: 21px;
+  height: 25px;
 }
 .WeaterSection1 {
   display: flex;
@@ -12,39 +12,46 @@
   height: 29px;
   background-position: -31px 0;
   background-repeat: no-repeat;
-  top: -5px;
   background-size: 215px 184px;
   position: relative;
 }
 .WeatherSubInfo {
   display: flex;
-  font-size: 14px;
+  font-size: 13px;
   color: rgb(172, 172, 172);
+  align-items: center;
+  position: relative;
+  left: 7px;
+  top: -2px;
+  width: 230px;
+  height: 30px;
 }
 .WeatherSubInfo > span:first-child {
+  position: relative;
   font-weight: bold;
-  font-size: 16px;
-  margin-left: 10px;
+  font-size: 13px;
   color: black;
-  margin-top: -2px;
 }
 .WeatherSubInfo > span:nth-child(2) {
+  position: relative;
   color: blue;
-  margin-left: 10px;
+  left: 10px;
 }
 .WeatherSubInfo > span:nth-child(4) {
+  position: relative;
   color: red;
+  left: 10px;
 }
 .WeatherSubInfo > span:nth-child(3) {
-  margin-left: 3px;
-  margin-right: 3px;
+  position: relative;
+  left: 10px;
+  top: 1px;
 }
 .WeatherSubInfo > span:last-child {
+  position: relative;
   color: rgb(134, 134, 134);
-  margin-left: 10px;
-}
-.WeatherSubInfo span {
-  margin-top: 0px;
+  top: 1px;
+  left: 18px;
 }
 .DustIcon {
   background-image: url(/public/navericon.png);
@@ -61,6 +68,8 @@
   display: flex;
   font-size: 14px;
   color: black;
+  position: relative;
+  top: 5px;
 }
 .DustSection1 > span:nth-child(3) {
   margin-left: 7px;
