--- a/src/BlogStyle/BlogWrite.css
+++ b/src/BlogStyle/BlogWrite.css
@@ -5,6 +5,9 @@
   position: relative;
   background-color: rgb(224, 224, 224);
   height: auto;
+  top: 10px;
+  left: 10px;
+  padding: 0 15px 0 15px;
 }
 .WriteBody {
   display: flex;
@@ -28,6 +31,7 @@
   background-color: black;
   display: flex;
   align-items: center;
+  left: -15px;
 }
 .WriteTitleInput {
   width: 800px;
@@ -89,7 +93,7 @@
   width: 200px;
   position: relative;
   display: flex;
-  left: 1500px;
+  left: 80%;
 }
 .WriteTopText {
   color: gray;
