--- a/src/NewsContents/NewsContent01.css
+++ b/src/NewsContents/NewsContent01.css
@@ -1,12 +1,15 @@
-/* .NewsMainContent{
-
-} */
+.NewsMainContent {
+  position: relative;
+  width: 770px;
+  height: 270px;
+  margin: auto;
+}
 .NewsIMG {
   height: 20px;
   cursor: pointer;
 }
 .Newsblock {
-  width: 125px;
+  width: 100%;
   height: 65px;
   display: flex;
   justify-content: center;
@@ -18,7 +21,7 @@
   display: flex;
 }
 .NewsPage1 {
-  width: 764px;
+  width: 770px;
   height: 270px;
 }
 .NewsPrevArrowBt {
@@ -38,7 +41,7 @@
   height: 44px;
   position: absolute;
   top: 115px;
-  left: 740px;
+  left: 750px;
   display: flex;
   justify-content: center;
   align-items: center;
