--- a/src/styles/CategoryHeader.css
+++ b/src/styles/CategoryHeader.css
@@ -1,14 +1,18 @@
 .CategoryMainSection {
   position: relative;
   margin-top: 20px;
-  padding-right: 5px;
-  height: 1500px;
 }
 .MainCategoryBlock {
   display: inline-block;
+  position: relative;
+}
+.CategoryScale {
+  position: relative;
+  width: 770px;
+  margin: auto;
 }
 .MainCategoryHeader {
-  width: 95px;
+  width: 96px;
   height: 49px;
   opacity: 0.7;
   display: flex;
@@ -17,6 +21,13 @@
   align-items: center;
   box-shadow: 0px 0px 0 1px rgb(202, 202, 202) inset;
   font-weight: bold;
+  margin: auto;
+}
+.BoxScale {
+  position: relative;
+  width: 97px;
+  height: 49px;
+  margin: auto;
 }
 .CategoryPrevArrowBt {
   width: 44px;
@@ -66,9 +77,10 @@
 .NoneContents {
   display: none;
 }
+.ShowContents {
+  display: block;
+}
 .Category01 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -83,8 +95,6 @@
   color: #e65da0;
 }
 .Category02 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -99,8 +109,6 @@
   color: #0147b5;
 }
 .Category03 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -115,8 +123,6 @@
   color: #4a94e1;
 }
 .Category04 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -131,8 +137,6 @@
   color: #66c971;
 }
 .Category05 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -147,8 +151,6 @@
   color: #35ae5e;
 }
 .Category06 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -163,8 +165,6 @@
   color: #5290ff;
 }
 .Category07 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -179,8 +179,6 @@
   color: #ebaa00;
 }
 .Category08 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -195,8 +193,6 @@
   color: #c08d31;
 }
 .Category09 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
@@ -211,8 +207,6 @@
   color: #42be6f;
 }
 .Category10 {
-  width: 95px;
-  height: 49px;
   opacity: 0.7;
   display: flex;
   position: relative;
