--- a/src/styles/M2LoginUser.css
+++ b/src/styles/M2LoginUser.css
@@ -41,7 +41,7 @@
   font-size: 13px;
   margin-left: 5px;
   margin-right: 5px;
-  margin-bottom: 5px;
+  /* margin-bottom: 5px; */
   opacity: 0.7;
 }
 .M2UserFlatform {
