--- a/src/styles/ProfileImage.css
+++ b/src/styles/ProfileImage.css
@@ -112,7 +112,7 @@
   position: relative;
 }
 .ProfileImage {
-  display: block;
+  display: inline-block;
   width: 100px;
   height: 100px;
   border-radius: 50%;
