--- a/src/BlogStyle/MyBlog.css
+++ b/src/BlogStyle/MyBlog.css
@@ -47,6 +47,7 @@
 .MyBlogTopMenuText {
   font-size: 12px;
   color: grey;
+  cursor: pointer;
 }
 .MyBlogTopMenuText:hover {
   text-decoration: underline;
@@ -146,9 +147,10 @@
   height: 180px;
   z-index: 999;
   position: relative;
-  top: 20px;
+  top: 13px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .BlogMyMenuList2 {
   margin: auto;
@@ -163,6 +165,7 @@
 .BlogMyMenueText {
   font-size: 14px;
   color: black;
+  height: 20px;
   cursor: pointer;
 }
 .BlogAllContentList {
