--- a/src/styles/M2LoginUser.css
+++ b/src/styles/M2LoginUser.css
@@ -15,9 +15,13 @@
   background-color: rgb(252, 252, 252);
   border-top: 1px solid rgb(236, 236, 236);
 }
+.M2UserImgArea {
+  position: relative;
+  width: 70px;
+  height: 50px;
+  top: -5px;
+}
 .M2UserProfileImg {
-  background-image: url(/public/myInfo.gif);
-  background-size: 56px 56px;
   width: 56px;
   height: 56px;
   border-radius: 50%;
@@ -26,6 +30,7 @@
   cursor: pointer;
 }
 .M2UserMainInfo {
+  position: relative;
   margin-left: 20px;
   margin-top: 10px;
 }
@@ -81,8 +86,8 @@
   width: 64px;
   height: 27px;
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: -10px;
+  right: -30px;
 }
 .M2UserSecurityIcon {
   background-image: url(/public/usericon.png);
@@ -105,13 +110,12 @@
 .M2UserProfileSetting {
   background-image: url(/public/usericon.png);
   position: relative;
-  left: 40px;
-  bottom: -35px;
   display: inline-block;
+  top: -25px;
+  right: -40px;
   width: 23px;
   height: 23px;
   background-position: -50px -249px;
   background-repeat: no-repeat;
-  vertical-align: top;
   background-size: 307px 289px;
 }
